--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -103,15 +103,15 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)lib;$(SolutionDir)$(Platform)\lib;$(SolutionDir)dep;$(SolutionDir)$(Platform)\dep;</AdditionalIncludeDirectories>
-      <ProgramDataBaseFileName>$(IntDir)$(SolutionName).pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).lib $(SolutionDir)lib\$(Platform)\ -Force
-PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
+      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)\ -Force
+PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copies project lib to librairy directory</Message>
@@ -129,15 +129,15 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)lib;$(SolutionDir)$(Platform)\lib;$(SolutionDir)dep;$(SolutionDir)$(Platform)\dep;</AdditionalIncludeDirectories>
-      <ProgramDataBaseFileName>$(IntDir)$(SolutionName).pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).lib $(SolutionDir)lib\$(Platform)\ -Force
-PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
+      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)\ -Force
+PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copies project lib to librairy directory</Message>
@@ -157,7 +157,7 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)lib;$(SolutionDir)$(Platform)\lib;$(SolutionDir)dep;$(SolutionDir)$(Platform)\dep;</AdditionalIncludeDirectories>
-      <ProgramDataBaseFileName>$(IntDir)$(SolutionName).pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -166,8 +166,8 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).lib $(SolutionDir)lib\$(Platform)\ -Force
-PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
+      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)\ -Force
+PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copies project lib to librairy directory</Message>
@@ -187,7 +187,7 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(SolutionDir)lib;$(SolutionDir)$(Platform)\lib;$(SolutionDir)dep;$(SolutionDir)$(Platform)\dep;</AdditionalIncludeDirectories>
-      <ProgramDataBaseFileName>$(IntDir)$(SolutionName).pdb</ProgramDataBaseFileName>
+      <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -196,8 +196,8 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).lib $(SolutionDir)lib\$(Platform)\ -Force
-PowerShell.exe -Command Copy-Item $(OutDir)$(SolutionName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
+      <Command>PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).lib $(SolutionDir)lib\$(Platform)\ -Force
+PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$(Platform)\ -Force</Command>
     </PostBuildEvent>
     <PostBuildEvent>
       <Message>Copies project lib to librairy directory</Message>
