Slowly specifing implementation NDev display module.

--- a/NDevDisplayLIB/NDevDisplayLIB.vcxproj.filters
+++ b/NDevDisplayLIB/NDevDisplayLIB.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="..\lib\NDevDisplay\NDevWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\NDevDisplay\NDevStyle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
