--- a/NDevDisplayLIB/NDevDisplayLIB.vcxproj
+++ b/NDevDisplayLIB/NDevDisplayLIB.vcxproj
@@ -204,6 +204,7 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$
     <ClInclude Include="..\lib\NDevDisplay\NDevDisplay.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevOpenGL.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevShader.h" />
+    <ClInclude Include="..\lib\NDevDisplay\NDevStyle.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevWindow.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
