--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -210,6 +210,7 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$
     <ClInclude Include="..\lib\NDev.h" />
     <ClInclude Include="..\lib\NDevArray.h" />
     <ClInclude Include="..\lib\NDevBases.h" />
+    <ClInclude Include="..\lib\NDevBits.h" />
     <ClInclude Include="..\lib\NDevBytes.h" />
     <ClInclude Include="..\lib\NDevData.h" />
     <ClInclude Include="..\lib\NDevDefinitions.h" />
