--- a/NDevDisplayLIB/NDevDisplayLIB.vcxproj
+++ b/NDevDisplayLIB/NDevDisplayLIB.vcxproj
@@ -199,13 +199,13 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\lib\NDevDisplay\NDevContext.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevController.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevDisplay.h" />
-    <ClInclude Include="..\lib\NDevDisplay\NDevOpenGL.h" />
+    <ClInclude Include="..\lib\NDevDisplay\NDevPipeline.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevShader.h" />
-    <ClInclude Include="..\lib\NDevDisplay\NDevStyle.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevWindow.h" />
+    <ClInclude Include="..\lib\NDevDisplay\_NDevHWND.h" />
+    <ClInclude Include="..\lib\NDevDisplay\_NDevOpenGL.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
