--- a/NDevDisplayLIB/NDevDisplayLIB.vcxproj.filters
+++ b/NDevDisplayLIB/NDevDisplayLIB.vcxproj.filters
@@ -21,16 +21,10 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\lib\NDevDisplay\NDevContext.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\lib\NDevDisplay\NDevController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\lib\NDevDisplay\NDevDisplay.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\lib\NDevDisplay\NDevOpenGL.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\lib\NDevDisplay\NDevShader.h">
@@ -39,7 +33,13 @@
     <ClInclude Include="..\lib\NDevDisplay\NDevWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\lib\NDevDisplay\NDevStyle.h">
+    <ClInclude Include="..\lib\NDevDisplay\_NDevHWND.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\lib\NDevDisplay\_NDevOpenGL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\lib\NDevDisplay\NDevPipeline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
