--- a/NDevLIB/NDevLIB.vcxproj.filters
+++ b/NDevLIB/NDevLIB.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="..\lib\NDevAlgorithm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\NDevMathBases.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
