--- a/NDevLIB/NDevLIB.vcxproj.filters
+++ b/NDevLIB/NDevLIB.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="..\lib\NDevMathBases.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\NDevRange.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
