--- a/NDevDisplayLIB/NDevDisplayLIB.vcxproj
+++ b/NDevDisplayLIB/NDevDisplayLIB.vcxproj
@@ -204,8 +204,8 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$
     <ClInclude Include="..\lib\NDevDisplay\NDevPipeline.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevShader.h" />
     <ClInclude Include="..\lib\NDevDisplay\NDevWindow.h" />
-    <ClInclude Include="..\lib\NDevDisplay\_NDevHWND.h" />
-    <ClInclude Include="..\lib\NDevDisplay\_NDevOpenGL.h" />
+    <ClInclude Include="..\lib\NDevDisplay\_NDevGLFW.h" />
+    <ClInclude Include="..\lib\NDevDisplay\_NDevVulkan.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
