--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -246,6 +246,7 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$
     <ClInclude Include="..\lib\NDevBuffer.h" />
     <ClInclude Include="..\lib\NDevTree.h" />
     <ClInclude Include="..\lib\NDevTypes.h" />
+    <ClInclude Include="..\lib\NDevVersor.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
