Small change on set boiler code

--- a/NDevLIB/NDevLIB.vcxproj
+++ b/NDevLIB/NDevLIB.vcxproj
@@ -236,11 +236,11 @@ PowerShell.exe -Command Copy-Item $(OutDir)$(TargetName).pdb $(SolutionDir)lib\$
     <ClInclude Include="..\lib\NDevPoint.h" />
     <ClInclude Include="..\lib\NDevPointer.h" />
     <ClInclude Include="..\lib\NDevQueue.h" />
-    <ClInclude Include="..\lib\NDevRange.h" />
     <ClInclude Include="..\lib\NDevRecord.h" />
     <ClInclude Include="..\lib\NDevReferences.h" />
     <ClInclude Include="..\lib\NDevResource.h" />
     <ClInclude Include="..\lib\NDevSequence.h" />
+    <ClInclude Include="..\lib\NDevSet.h" />
     <ClInclude Include="..\lib\NDevSimulation.h" />
     <ClInclude Include="..\lib\NDevStack.h" />
     <ClInclude Include="..\lib\NDevBuffer.h" />
