--- a/NDevLIB/NDevLIB.vcxproj.filters
+++ b/NDevLIB/NDevLIB.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="..\lib\NDevSet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\_NDev.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
